compiler/testData/diagnostics/tests/unsignedTypes/callDefaultConstructorOfUnsignedType.fir.kt
// RUN_PIPELINE_TILL: FRONTEND
val foo = UInt<!NO_VALUE_FOR_PARAMETER!>()<!>

/* GENERATED_FIR_TAGS: propertyDeclaration */
